--- a/index.html
+++ b/index.html
@@ -1,31 +1,81 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Ember Starter Kit</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <title>Ember App</title>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="styles/main.css"/>
+    <script src="js/libs/jquery-1.8.3.min.js"></script>
+    <script src="js/libs/handlebars-1.0.0.rc.2.js"></script>
+    <script src="js/libs/ember.js"></script>
+    <script src="js/libs/ember-data.js"></script>
+    <script src="js/app.js"></script>
+  </head>
 
-  <script type="text/x-handlebars">
-    <h2>Welcome to Ember.js</h2>
+  <body>
+    <script type="text/x-handlebars" data-template-name="application">
+      <h1>Book Catalog</h1>
+      <hr/>
+      <div id="outer"> 
+        {{outlet}}
+      </div>
+    </script>
 
-    {{outlet}}
-  </script>
+    <script type="text/x-handlebars" data-template-name="books">
+      {{#each book in controller}}
+          {{#linkTo "book" book}}
+           <p class="book">
+              <img {{bindAttr src= "book.url"}} alt="Image Here" height="200px" width="200px"></img>
+           </p> 
+          {{/linkTo}}
+      {{/each}}
+    </script>
 
-  <script type="text/x-handlebars" data-template-name="index">
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
-    </ul>
-  </script>
+    <script type="text/x-handlebars" data-template-name="book">
+      <div id="img">
+        <img {{bindAttr src= "url"}} alt="Image Here" height="200px" width="200px"></img>
+      </div>
 
-  <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.5.js"></script>
-  <script src="js/app.js"></script>
+      <div id="det">
+        <h2>Name        :   {{name}}</h2>
+        <h3>Author      :   {{author}}</h3>
+        <h3>Category    :   {{category}}</h3>
+        <h3>Description :   {{description}}</h3>
+      </div>
+    </script>
 
-</body>
+  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
