Working partial modular

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
     <title>Ember App</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="styles/main.css"/>
-    <script src="js/libs/jquery-1.8.3.min.js"></script>
-    <script src="js/libs/handlebars-1.0.0.rc.2.js"></script>
-    <script src="js/libs/ember.js"></script>
-    <script src="js/libs/ember-data.js"></script>
-    <script src="js/app.js"></script>
+    <script data-main="js/main" src="js/libs/vendor/require/require.min.js">
+    </script>
   </head>
 
   <body>
@@ -44,38 +41,3 @@
 
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
